--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,7 +22,7 @@ composeMultiplatform = "1.10.1"
 material3 = "1.10.0-alpha05"
 
 sqldelight = "2.2.1"
-cash_paging = "3.1.1-0.3.1"
+cash_paging = "3.3.0-alpha02-0.5.1"
 
 
 kotlinx-coroutines = "1.10.2"
@@ -65,8 +65,8 @@ compose-uiToolingPreview = { module = "org.jetbrains.compose.ui:ui-tooling-previ
 
 
 #pagging
-cash-paging-runtime = { module = "app.cash.paging:paging-runtime", version.ref = "cash-paging" }
-cash-paging-compose = { module = "app.cash.paging:paging-compose", version.ref = "cash-paging" }
+cash-paging-runtime = { module = "app.cash.paging:paging-common", version.ref = "cash_paging" }
+cash-paging-compose = { module = "app.cash.paging:paging-compose-common", version.ref = "cash_paging" }
 
 
 # Ktor
