--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -39,6 +39,9 @@ koin-compose = "4.1.1"
 multiplatform-markdown-renderer = "0.39.2"
 highlights = "1.1.0"
 
+datastoreCoreAndroid = "1.2.0"
+datastorePreferences = "1.2.0"
+
 [libraries]
 
 # KotlinX
@@ -106,6 +109,10 @@ sqldelight-jvm-driver = { module = "app.cash.sqldelight:sqlite-driver", version.
 sqldelight-coroutines-extensions = { module = "app.cash.sqldelight:coroutines-extensions", version.ref = "sqldelight" }
 sqldelight-androidx-paging3-extension =  { module = "app.cash.sqldelight:androidx-paging3-extensions", version.ref = "sqldelight"}
 
+#datastore
+datastore-core = { module = "androidx.datastore:datastore-preferences-core", version.ref = "datastoreCoreAndroid" }
+datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
+
 [plugins]
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
@@ -115,3 +122,4 @@ composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "k
 vanniktech-mavenPublish = { id = "com.vanniktech.maven.publish", version.ref = "vanniktechMavenPublish" }
 
 sqldelight = { id = "app.cash.sqldelight", version.ref = "sqldelight" }
+serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
